--- a/styles/messages.less
+++ b/styles/messages.less
@@ -1,7 +1,7 @@
 @import "ui-variables";
 
 ul.background-message {
-  font-weight: bold;
+  // font-weight: bold;
   color: rgba(0, 0, 0, .2);
 }
 .panel-heading {
