--- a/styles/text.less
+++ b/styles/text.less
@@ -58,7 +58,7 @@ code {
 
 .highlight {
   color: @text-color-highlight;
-  font-weight: bold;
+  // font-weight: bold;
   text-shadow: none;
   background-color: @background-color-highlight;
   border-radius: @component-border-radius;
@@ -68,7 +68,7 @@ code {
 .highlight-color(@name, @color, @text-color) {
   .highlight-@{name} {
     color: lighten(saturate(@text-color, 0%), 30%);
-    font-weight: bold;
+    // font-weight: bold;
     text-shadow: none;
     background-color: fadeout(@color, 60%);
     border-radius: @component-border-radius;
